--- a/index.html
+++ b/index.html
@@ -20,12 +20,8 @@
 <body>
     <div class="banner">
         <div id="project_info">
-            <h1>From Neopxl-MenuFijoEnScroll</h1>
-            <p>Este repositorio aloja el Demo del Efecto de men&uacute; fijo al hacer scroll, hecho con jQuery</p>
-        <ul>
-          <li><a href="https://github.com/Metaviolet/Neopxl-CSSMask-Demo/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/Metaviolet/Neopxl-CSSMask-Demo">View On <strong>GitHub</strong></a></li>
-        </ul>
+            <h1>Banner</h1>
+            <p>Este es el Demo del Efecto de men&uacute; fijo al hacer scroll, hecho con jQuery</p>
          </div>        
     </div>
     <div class="header">
